--- a/tl1-proyectofinal2024-Isas321.csproj
+++ b/tl1-proyectofinal2024-Isas321.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>tl1_proyectofinal2024_Isas321</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
 </Project>
